--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/dashboard.css">
+    <link rel="icon" href="../assets/img/trivia-boost-logo.svg" type="img/svg+xml">
     <title>Dashboard</title>
 </head>
 <body>
