--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in to TriviaBoost</title>
     <link rel="stylesheet" href="../css/login.css">
+    <link rel="icon" href="../assets/img/trivia-boost-logo.svg" type="img/svg+xml">
 
 </head>
 <body>
