--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="register__section">
         <a href="/login" class="btn__login">Login</a>
-        <a href="#" class="btn__signup">Sign Up</a>
+        <a href="/signup" class="btn__signup">Sign Up</a>
     </div>
   </header>
 
