--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -14,7 +14,8 @@
             <img src="../assets/img/trivia-boost-logo.svg" alt="">
             <h1>Sign in to TriviaBoost</h1>
         </div>
-        <form id='login_form' class="inputs__container">
+        <form id='login__form' class="inputs__container">
+            <div id="errDivContainer"></div>
             <div class="input1 input">
                 <div class="input__label">
                     <label for="">Username or email adress</label>
