--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -10,17 +10,14 @@
 </head>
 <body>
     <div class="container">
-        <div class="signup__poster">
-            <img src="" alt="">
-        </div>
         <div class="signup__container">
-            <div class="login__link">
-                <p>Already have a account?<a href="/login">Login</a></p>
+            <div class="logo">
+                <img src="../assets/img/trivia-boost-logo.svg" alt="">
             </div>
             <form id="signup__form" class="signup__form">
                 <div class="title">
-                    <h1>Create your account</h1>
-                    <p>Explore all TriviaBoost features</p>
+                    <h1>Welcome to TriviaBoost</h1>
+                    <p>Create your account and unlock the power of smart, fast-paced trivia.</p>
                 </div>
                 <div class="inputs__container">
                     <div class="input">
@@ -37,7 +34,10 @@
                     </div>
                 </div>
                 <div class="create__account">
-                    <button class="create__account__btn" id="create__account__btn">Create account</button>
+                    <button class="create__account__btn" id="create__account__btn" type="submit">Create account</button>
+                </div>
+                <div class="login__link">
+                    <p>Already have a account?<a href="/login">Login</a></p>
                 </div>
             </form>
         </div>
