--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -38,5 +38,24 @@
         </div>
     </div>
     <script src="../js/login.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+
 </body>
+<script>
+    const btn = document.querySelector('.btn')
+
+    btn.addEventListener('mouseenter', () => {
+        gsap.to(btn, { scale: 1.05, duration: 1, ease: 'elastic'})
+    })
+
+    btn.addEventListener('mouseleave', () => {
+        gsap.to(btn, { scale: 1, duration: 1, ease: 'elastic'})
+    })
+
+    
+
+     
+
+
+</script>
 </html>
