--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -11,11 +11,11 @@
 <body>
     <div class="login__container">
         <div class="logo">
-            <img src="../assets/img/trivia-boost-logo.svg" alt="">
+            <img src="../assets/img/trivia-boost-logo.svg" alt="" fetchpriority="high">
             <h1>Sign in to TriviaBoost</h1>
         </div>
         <form id='login__form' class="inputs__container">
-            <div id="errDivContainer"></div>
+            <div id="errDivContainer">Invalid Credentials</div>
             <div class="input1 input">
                 <div class="input__label">
                     <label for="">Username or email adress</label>
