--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -12,12 +12,12 @@
     <div class="container">
         <div class="signup__container">
             <div class="logo">
-                <img src="../assets/img/trivia-boost-logo.svg" alt="">
+                <img src="../assets/img/trivia-boost-logo.svg" alt="" fetchpriority="high">
             </div>
             <form id="signup__form" class="signup__form">
                 <div class="title">
                     <h1>Welcome to TriviaBoost</h1>
-                    <p>Create your account and unlock the power of smart, fast-paced trivia.</p>
+                    <p>Create your account and train you brain</p>
                 </div>
                 <div class="inputs__container">
                     <div class="input">
@@ -43,5 +43,18 @@
         </div>
     </div>
     <script src="../js/signup.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 </body>
+<script>
+    const btn = document.querySelector('.create__account__btn')
+
+    btn.addEventListener('mouseenter', () => {
+        gsap.to(btn, { scale: 1.05, duration: 1, ease: 'elastic'})
+    })
+
+    btn.addEventListener('mouseleave', () => {
+        gsap.to(btn, { scale: 1, duration: 1, ease: 'elastic'})
+    })
+
+</script>
 </html>
