--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -15,7 +15,7 @@
             <h1>Sign in to TriviaBoost</h1>
         </div>
         <form id='login__form' class="inputs__container">
-            <div id="errDivContainer">Invalid Credentials</div>
+            <div id="errDivContainer" class="errDivContainer">Invalid Credentials</div>
             <div class="input1 input">
                 <div class="input__label">
                     <label for="">Username or email adress</label>
