--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -19,6 +19,7 @@
                     <h1>Welcome to TriviaBoost</h1>
                     <p>Create your account and train you brain</p>
                 </div>
+                <div id="errDivContainer" class="errDivContainer">Invalid Credentials</div>
                 <div class="inputs__container">
                     <div class="input">
                         <label>Email</label>
