--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -53,14 +53,18 @@
               <h1 class="title">Fun & Challenging Quizzes</h1>
               <p class="subtitle">Play quizzes across different subjects and challenge your knowledge every day.</p>
             </div>
-            <img src="../assets/img/subject-icons.svg" width="250" height="250" alt="img" fetchpriority="high">
+            <div class="box__img">
+              <img src="../assets/img/subject-icons.svg" width="250" height="250" alt="img" fetchpriority="high">
+            </div>
           </div>
           <div class="box box2">
             <div class="box__content">
               <h1 class="title">Your Learning Journey</h1>
               <p class="subtitle">Track your performance with clear stats and discover your strengths and weaknesses.</p>
             </div>
-            <img src="../assets/img/features-progress-img.svg" width="250" height="250" alt="img" fetchpriority="high">
+            <div class="box__img">
+              <img src="../assets/img/features-progress-img.svg" width="250" height="250" alt="img" fetchpriority="high">
+            </div>
           </div>
         </div>
         <div class="box__container">
@@ -69,19 +73,21 @@
               <h1 class="title">Climb the Leaderboard</h1>
               <p class="subtitle">Earn points with every quiz and compete to rise on the leaderboard.</p>
             </div>
-            <img src="../assets/img/Points-icon.svg" width="250" height="250" alt="img" fetchpriority="high">
+            <div class="box__img">
+              <img src="../assets/img/Points-icon.svg" width="250" height="250" alt="img" fetchpriority="high">
+            </div>
           </div>
           <div class="box box4">
             <div class="box__content">
               <h1 class="title">Tailored Quizzes Just for You</h1>
               <p class="subtitle">Get personalized quizzes based on the questions you missed the most, so you improve exactly where you need to.</p>
             </div>
-            <img src="../assets/img/features-practice-icon.svg" width="250" height="250" alt="img" fetchpriority="high">
+            <div class="box__img">
+              <img src="../assets/img/features-practice-icon.svg" width="250" height="250" alt="img" fetchpriority="high">
+            </div>
           </div>
         </div>
       </div>
-
-      
     </section>
 
     <section class="contact" id="contact">
