--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -25,7 +25,7 @@
             <div class="input2 input">
                 <div class="input__label">
                     <label for="">Password</label>
-                    <a href="#">Forgot password?</a>
+                    <a href="#" class="forgot__password">Forgot password?</a>
                 </div>
                 <input type="password" name="password" placeholder="Password" required>
             </div>
