--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="header__logo">
-      <img  class="logo__icon" src="../assets/img/trivia-boost-logo.svg" alt="img" width="36" height="36" fetchpriority="high">
+      <img  class="logo__icon" src="../assets/img/trivia-boost-logo.svg" alt="img" width="48" height="48" fetchpriority="high">
       <h1 class="header__title"><a href="#">TriviaBoost</a></h1>
     </div>
     <nav class="navbar">
@@ -39,7 +39,9 @@
 
     <section class="features" id="features">
       <header class="features__header">
-        <h2 class="features__label">Features</h2>
+        <div class="features__label__container">
+          <h2 class="features__label">Features</h2>
+        </div>
         <h1 class="features__title">Boost Your Brain, Have Some Fun</h1>
         <p class="features__subtitle">
           From math to history, explore quizzes that keep your mind sharp.
@@ -54,7 +56,7 @@
               <p class="subtitle">Play quizzes across different subjects and challenge your knowledge every day.</p>
             </div>
             <div class="box__img">
-              <img src="../assets/img/subject-icons.svg" width="250" height="250" alt="img" fetchpriority="high">
+              <img src="../assets/img/subject-icons.svg" width="150" height="185" alt="img" fetchpriority="high">
             </div>
           </div>
           <div class="box box2">
@@ -63,7 +65,7 @@
               <p class="subtitle">Track your performance with clear stats and discover your strengths and weaknesses.</p>
             </div>
             <div class="box__img">
-              <img src="../assets/img/features-progress-img.svg" width="250" height="250" alt="img" fetchpriority="high">
+              <img src="../assets/img/features-progress-img.svg" width="200" height="200" alt="img" fetchpriority="high">
             </div>
           </div>
         </div>
@@ -74,7 +76,7 @@
               <p class="subtitle">Earn points with every quiz and compete to rise on the leaderboard.</p>
             </div>
             <div class="box__img">
-              <img src="../assets/img/Points-icon.svg" width="250" height="250" alt="img" fetchpriority="high">
+              <img src="../assets/img/Points-icon.svg" width="200" height="200" alt="img" fetchpriority="high">
             </div>
           </div>
           <div class="box box4">
@@ -83,7 +85,7 @@
               <p class="subtitle">Get personalized quizzes based on the questions you missed the most, so you improve exactly where you need to.</p>
             </div>
             <div class="box__img">
-              <img src="../assets/img/features-practice-icon.svg" width="250" height="250" alt="img" fetchpriority="high">
+              <img src="../assets/img/features-practice-icon.svg" width="200" height="200" alt="img" fetchpriority="high">
             </div>
           </div>
         </div>
