--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -12,7 +12,7 @@
     <div class="login__container">
         <div class="logo">
             <img src="../assets/img/trivia-boost-logo.svg" alt="" fetchpriority="high">
-            <h1>Sign in to TriviaBoost</h1>
+            <h1>Welcome Back</h1>
         </div>
         <form id='login__form' class="inputs__container">
             <div id="errDivContainer" class="errDivContainer">Invalid credentials!</div>
