--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="header__logo">
-      <img  class="logo__icon" src="../assets/img/trivia-boost-logo.svg" alt="img" width="48" height="48" fetchpriority="high">
+      <img  class="logo__icon" src="../assets/img/trivia-boost-logo.svg" alt="img" width="32" height="32" fetchpriority="high">
       <h1 class="header__title"><a href="#">TriviaBoost</a></h1>
     </div>
     <nav class="navbar">
@@ -33,7 +33,7 @@
       <div class="homepage__hero__content">
         <h1 class="homepage__title">Ready to Boost Your Brainpower?</h1>
         <p class="homepage__subtitle">Play, learn, and compete with quizzes designed to make your brain stronger every day</p>
-        <a class="homepage__button" href="/login"><img src="../assets/img/triviaBoost-logo-whiteversion.svg" alt="img" width="18" height="18" fetchpriority="high">Get Started</a>
+        <a class="homepage__button" href="/login"><svg class="quizzes__icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-zap-icon lucide-zap"><path d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"/></svg>Get Started</a>
       </div>
     </section>
 
@@ -56,7 +56,7 @@
               <p class="subtitle">Play quizzes across different subjects and challenge your knowledge every day.</p>
             </div>
             <div class="box__img">
-              <img src="../assets/img/subject-icons.svg" width="150" height="185" alt="img" fetchpriority="high">
+              <img src="../assets/img/quizIconsIllustration.svg" width="200" height="200" alt="img" fetchpriority="high">
             </div>
           </div>
           <div class="box box2">
@@ -65,7 +65,7 @@
               <p class="subtitle">Track your performance with clear stats and discover your strengths and weaknesses.</p>
             </div>
             <div class="box__img">
-              <img src="../assets/img/features-progress-img.svg" width="200" height="200" alt="img" fetchpriority="high">
+              <img src="../assets/img/statsIllustration.svg" width="200" height="200" alt="img" fetchpriority="high">
             </div>
           </div>
         </div>
@@ -76,7 +76,7 @@
               <p class="subtitle">Earn points with every quiz and compete to rise on the leaderboard.</p>
             </div>
             <div class="box__img">
-              <img src="../assets/img/Points-icon.svg" width="200" height="200" alt="img" fetchpriority="high">
+              <img src="../assets/img/pointsIconIllustration.svg" width="200" height="200" alt="img" fetchpriority="high">
             </div>
           </div>
           <div class="box box4">
@@ -85,72 +85,23 @@
               <p class="subtitle">Get personalized quizzes based on the questions you missed the most, so you improve exactly where you need to.</p>
             </div>
             <div class="box__img">
-              <img src="../assets/img/features-practice-icon.svg" width="200" height="200" alt="img" fetchpriority="high">
+              <img src="../assets/img/quizPracticeIllustration.svg" width="200" height="200" alt="img" fetchpriority="high">
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="contact" id="contact">
-      <div class="contact__header">
-        <p class="contact__label">Contact</p>
-        <h1 class="contact__title">We've love to hear from you!</h1>
-      </div>
-      <div class="contact__container">
-        <div class="contact__title">
-         <div class="logo">
-          <img src="../assets/img/contact-form-img.svg" alt="img" width="900" height="900" fetchpriority="high">
-          </div>
-        </div>
-        <form class="contact__form">
-          <h2 class="contact__form__title">Send a message</h2>
-          <div class="contact-groups">
-            <div class="input__group1">
-              <div class="input1">
-                <label for="">First name</label>
-                <input type="text" placeholder="First name" class="contact__input" required>
-              </div>
-              <div class="input2">
-                <label for="">Last name</label>
-                <input type="text" placeholder="Last name" class="contact__input" required>
-              </div>
-            </div>
-            <div class="input__group2">
-              <div class="input1">
-                <label for="">Email</label>
-                <input type="email" id="email" placeholder="Email" class="contact__input" required>
-              </div>
-              <div class="input2">
-                <label for="">Message</label>
-                <textarea placeholder="Your Message" class="contact__input textarea" required></textarea>
-              </div>
-            </div>
-            
-            <button type="submit" class="contact__btn">Summit</button>
-          </div>
-        </form>
-      </div>
-      </div>
-    </section>
 
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script>
   const logo = document.querySelector('.logo__icon')
-  const contactBtn = document.querySelector('.contact__btn')
   const homeBtn = document.querySelector('.homepage__button')
   const btnLogin = document.querySelector('.btn__login');
   const btnSignup = document.querySelector('.btn__signup');
 
-  
-  contactBtn.addEventListener('mouseenter', () => {
-    gsap.to(contactBtn, { scale: 1.05, duration: 1, ease: 'elastic' })
-  })
 
-  contactBtn.addEventListener('mouseleave', () => {
-    gsap.to(contactBtn, { scale: 1, duration: 1, ease: 'elastic'})
-  })
 
 
   homeBtn.addEventListener('mouseenter', () => {
