--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -10,22 +10,22 @@
 </head>
 <body>
   <header class="header">
-    <div class="header__logo">
-      <img  class="logo__icon" src="../assets/img/trivia-boost-logo.svg" alt="img" width="32" height="32" fetchpriority="high">
-      <h1 class="header__title"><a href="#">TriviaBoost</a></h1>
-    </div>
-    <nav class="navbar">
-      <div class="info">
-        <a href="#features" class="navItem">Features</a>
-        <a href="#" class="navItem">Explore</a>
-        <a href="#" class="navItem">About</a>
-        <a href="#" class="navItem">Contact</a>
+      <div class="header__logo">
+        <img  class="logo__icon" src="../assets/img/trivia-boost-logo.svg" alt="img" width="32" height="32" fetchpriority="high">
+        <h1 class="header__title"><a href="#">TriviaBoost</a></h1>
       </div>
-    </nav>
-    <div class="register__section">
+      <nav class="navbar">
+        <div class="info">
+          <a href="#features" class="navItem">Features</a>
+          <a href="#" class="navItem">Explore</a>
+          <a href="#" class="navItem">About</a>
+          <a href="#" class="navItem">Contact</a>
+        </div>
+      </nav>
+      <div class="register__section">
         <button class="btn__login">Sign in</button>
         <button class="btn__signup">Sign up</button>
-    </div>
+      </div>
   </header>
 
   <main class="homepage">
@@ -40,7 +40,7 @@
     <section class="features" id="features">
       <header class="features__header">
         <div class="features__label__container">
-          <h2 class="features__label">Features</h2>
+          <h2 class="features__label"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-puzzle-icon lucide-puzzle"><path d="M15.39 4.39a1 1 0 0 0 1.68-.474 2.5 2.5 0 1 1 3.014 3.015 1 1 0 0 0-.474 1.68l1.683 1.682a2.414 2.414 0 0 1 0 3.414L19.61 15.39a1 1 0 0 1-1.68-.474 2.5 2.5 0 1 0-3.014 3.015 1 1 0 0 1 .474 1.68l-1.683 1.682a2.414 2.414 0 0 1-3.414 0L8.61 19.61a1 1 0 0 0-1.68.474 2.5 2.5 0 1 1-3.014-3.015 1 1 0 0 0 .474-1.68l-1.683-1.682a2.414 2.414 0 0 1 0-3.414L4.39 8.61a1 1 0 0 1 1.68.474 2.5 2.5 0 1 0 3.014-3.015 1 1 0 0 1-.474-1.68l1.683-1.682a2.414 2.414 0 0 1 3.414 0z"/></svg>Features</h2>
         </div>
         <h1 class="features__title">Boost Your Brain, Have Some Fun</h1>
         <p class="features__subtitle">
