--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -16,7 +16,7 @@
             </div>
             <form id="signup__form" class="signup__form">
                 <div class="title">
-                    <h1>Welcome to TriviaBoost</h1>
+                    <h1>Welcome to TriviaBoost!</h1>
                     <p>Create your account and train you brain</p>
                 </div>
                 <div id="errDivContainer" class="errDivContainer">Invalid credentials!</div>
