--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
       <div class="header__logo">
-        <img  class="logo__icon" src="../assets/img/trivia-boost-logo.svg" alt="img" width="32" height="32" fetchpriority="high">
+        <img  class="logo__icon" src="../assets/img/trivia-boost-logo.svg" alt="img" width="38" height="38" fetchpriority="high">
         <h1 class="header__title"><a href="#">TriviaBoost</a></h1>
       </div>
       <nav class="navbar">
@@ -31,7 +31,7 @@
   <main class="homepage">
     <section class="homepage__hero">
       <div class="homepage__hero__content">
-        <h1 class="homepage__title">Ready to Boost Your Brainpower?</h1>
+        <h1 class="homepage__title"><span class="letter">Ready</span><span class="letter">To</span><span class="letter">Boost</span><span class="letter">Your</span><span class="letter">Brainpower</span></h1>
         <p class="homepage__subtitle">Play, learn, and compete with quizzes designed to make your brain stronger every day</p>
         <a class="homepage__button" href="/login"><svg class="quizzes__icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-zap-icon lucide-zap"><path d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"/></svg>Get Started</a>
       </div>
@@ -105,19 +105,20 @@
 
 
   homeBtn.addEventListener('mouseenter', () => {
-    gsap.to(homeBtn, { scale: 1.05, duration: 1, ease: 'elastic' })
+    gsap.to(homeBtn, { scale: 1.05, duration: 1, ease: 'elastic.out(1.3)' })
   })
 
   homeBtn.addEventListener('mouseleave', () => {
-    gsap.to(homeBtn, { scale: 1, duration: 1, ease: 'elastic'})
+    gsap.to(homeBtn, { scale: 1, duration: 1, ease: 'elastic.out(1.3)' })
   })
 
+
   logo.addEventListener('mouseenter', () => {
-    gsap.to('.logo__icon', { rotate: -10, duration: 1, ease: 'elastic' })
+    gsap.to('.logo__icon', { rotate: -10, duration: 1, ease: 'elastic.out(1.3)' })
   })
 
   logo.addEventListener('mouseleave', () => {
-    gsap.to('.logo__icon', { rotate: 0, duration: 1, ease: 'elastic'})
+    gsap.to('.logo__icon', { rotate: 0, duration: 1, ease: 'elastic.out(1.3)'})
   })
   
   btnLogin.addEventListener('click', () => {
@@ -129,67 +130,52 @@
   });
   
   btnLogin.addEventListener('mouseenter', () => {
-    gsap.to(btnLogin, { scale: 1.05, duration: 1, ease: 'elastic' });
+    gsap.to(btnLogin, { scale: 1.05, duration: 1, ease: 'elastic.out(1.3)' });
   });
   
   btnLogin.addEventListener('mouseleave', () => {
-    gsap.to(btnLogin, { scale: 1, duration: 1, ease: 'elastic' });
+    gsap.to(btnLogin, { scale: 1, duration: 1, ease: 'elastic.out(1.3)' });
   });
   
   btnSignup.addEventListener('mouseenter', () => {
-    gsap.to(btnSignup, { scale: 1.05, duration: 1, ease: 'elastic' });
+    gsap.to(btnSignup, { scale: 1.05, duration: 1, ease: 'elastic.out(1.3)' });
   });
   
   btnSignup.addEventListener('mouseleave', () => {
-    gsap.to(btnSignup, { scale: 1, duration: 1, ease: 'elastic' });
+    gsap.to(btnSignup, { scale: 1, duration: 1, ease: 'elastic.out(1.3)' });
   });
   
   
   function runHomepageAnimation() {
-    const mainTitle = document.querySelector('.homepage__title');
+    const mainTitle = document.querySelectorAll('.letter');
     const subtitle = document.querySelector('.homepage__subtitle');
-    const homeBtn = document.querySelector('.homepage__button')
-  
-    gsap.set(mainTitle, { visibility: 'hidden' });
-  
-    const titleText = mainTitle.textContent.trim();
-    mainTitle.textContent = '';
-  
-    titleText.split('').forEach(char => {
-      const span = document.createElement('span');
-      span.textContent = char === ' ' ? '\u00A0' : char;
-      span.style.display = 'inline-block';
-      mainTitle.appendChild(span);
-    });
-  
-    gsap.set(mainTitle, { visibility: 'visible' });
-  
-    gsap.from(mainTitle.querySelectorAll('span'), {
+    const homeBtn = document.querySelector('.homepage__button');
+
+    gsap.from(mainTitle, {
+      y: 50,
       opacity: 0,
-      y: 20,
+      stagger: 0.1,
       duration: 0.5,
-      stagger: 0.05,
-      ease: 'elastic',
-      scale: 3
+      ease: 'back.out(2.5)',
     });
-  
+
     gsap.from(subtitle, {
       y: 20,
       opacity: 0,
-      duration: 1,
-      ease: 'power2.inOut'
+      duration: 1.5,
+      ease: 'power4.inOut',
     });
 
     gsap.from(homeBtn, {
-      scale: 0,
+      scale: 0.8,
       y: 50,
-      duration: 2,
-      ease: 'elastic'
-    })
-
+      duration: 2.5,
+      ease: 'elastic.out(1, 0.3)'
+    });
   }
 
-  runHomepageAnimation()
+  runHomepageAnimation();
+
 </script>    
 </body>
 </html>
