--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in to TriviaBoost</title>
     <link rel="stylesheet" href="../css/login.css">
-    <link rel="icon" href="../assets/img/trivia-boost-logo.svg" type="img/svg+xml">
+    <link rel="icon" href="../assets/img/TriviaBoost-logo.svg" type="img/svg+xml">
 
 </head>
 <body>
     <div class="login__container">
         <div class="logo">
-            <img src="../assets/img/trivia-boost-logo.svg" alt="" fetchpriority="high">
+            <img src="../assets/img/TriviaBoost-logo.svg" alt="" fetchpriority="high">
             <h1>Welcome Back</h1>
             <p>Please enter your details to sign in</p>
         </div>
@@ -35,7 +35,8 @@
             </div>
         </form>
         <div class="create__account">
-            <p>Don't have an account yet? <a href="./signup">Create an account</a></p>
+            <p>Don't have an account yet?</p>
+            <a href="./signup">Create an account</a>
         </div>
     </div>
     <script src="../js/login.js"></script>
