--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in to TriviaBoost</title>
     <link rel="stylesheet" href="../css/signup.css">
-    <link rel="icon" href="../assets/img/trivia-boost-logo.svg" type="img/svg+xml">
+    <link rel="icon" href="../assets/img/TriviaBoost-logo.svg" type="img/svg+xml">
 
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="signup__container">
             <form id="signup__form" class="signup__form">
                 <div class="title">
-                    <img src="../assets/img/trivia-boost-logo.svg" alt="" fetchpriority="high">
+                    <img src="../assets/img/TriviaBoost-logo.svg" alt="" fetchpriority="high">
                     <h1>Welcome to TriviaBoost!</h1>
                     <p>Create your account and train you brain</p>
                 </div>
@@ -36,7 +36,8 @@
                     <button class="create__account__btn" id="create__account__btn" type="submit">Create account</button>
                 </div>
                 <div class="login__link">
-                    <p>Already have a account?<a href="/login">Login</a></p>
+                    <p>Already have a account?</p>
+                    <a href="/login">Login</a>
                 </div>
             </form>
         </div>
