--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/main.css">
-  <link rel="icon" href="../assets/img/trivia-boost-logo.svg" type="image/svg+xml">
+  <link rel="icon" href="../assets/img/TriviaBoost-logo.svg" type="image/svg+xml">
   <title>TriviaBoost</title>
 </head>
 <body>
   <header class="header">
       <div class="header__logo">
-        <img  class="logo__icon" src="../assets/img/trivia-boost-logo.svg" alt="img" width="38" height="38" fetchpriority="high">
+        <img  class="logo__icon" src="../assets/img/TriviaBoost-logo.svg" alt="img" width="38" height="38" fetchpriority="high">
         <h1 class="header__title"><a href="#">TriviaBoost</a></h1>
       </div>
       <nav class="navbar">
@@ -40,7 +40,7 @@
     <section class="features" id="features">
       <header class="features__header">
         <div class="features__label__container">
-          <h2 class="features__label"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-puzzle-icon lucide-puzzle"><path d="M15.39 4.39a1 1 0 0 0 1.68-.474 2.5 2.5 0 1 1 3.014 3.015 1 1 0 0 0-.474 1.68l1.683 1.682a2.414 2.414 0 0 1 0 3.414L19.61 15.39a1 1 0 0 1-1.68-.474 2.5 2.5 0 1 0-3.014 3.015 1 1 0 0 1 .474 1.68l-1.683 1.682a2.414 2.414 0 0 1-3.414 0L8.61 19.61a1 1 0 0 0-1.68.474 2.5 2.5 0 1 1-3.014-3.015 1 1 0 0 0 .474-1.68l-1.683-1.682a2.414 2.414 0 0 1 0-3.414L4.39 8.61a1 1 0 0 1 1.68.474 2.5 2.5 0 1 0 3.014-3.015 1 1 0 0 1-.474-1.68l1.683-1.682a2.414 2.414 0 0 1 3.414 0z"/></svg>Features</h2>
+          <h2 class="features__label"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle-icon lucide-sparkle"><path d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"/></svg>Features</h2>
         </div>
         <h1 class="features__title">Boost Your Brain, Have Some Fun</h1>
         <p class="features__subtitle">
