--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -51,12 +51,16 @@
                         </div>
                         <div class="points__container">
                             <div class="points__info">
-                                <h3 id="points__number">1200</h3>
-                                <img class="points__img" src="../assets/img/pointsIconIllustration.svg" height="24" width="24" fetchpriority="high" alt="">
+                                <h3 id="points__number">0</h3>
+                                <img class="points__img" src="../assets/img/pointsIconIllustration.svg" height="22" width="22" fetchpriority="high" alt="">
                             </div>
                             <span class="points__label">Points</span>
                         </div>
                     </div>
+                </div>
+
+                <div class="recommended__quiz__box">
+                    
                 </div>
             </div>
         </section>
