--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -33,6 +33,10 @@
         </aside>
 
         <section class="user__space">
+            <div class="main__dashboard__content">
+                <p class="date" id="date">Thurday, 20th February</p>
+                <h1 class="dashboard__title">Good Evening! Carlos,</h1>
+            </div>
             <div class="profile__container">
                 <div class="profile">
                     <div class="content_container">
@@ -51,16 +55,19 @@
                         </div>
                         <div class="points__container">
                             <div class="points__info">
-                                <h3 id="points__number">0</h3>
-                                <img class="points__img" src="../assets/img/pointsIconIllustration.svg" height="22" width="22" fetchpriority="high" alt="">
+                                <h3 id="points__number">1200</h3>
+                                <img class="points__img" src="../assets/img/pointsIconIllustration.svg" height="24" width="24" fetchpriority="high" alt="">
                             </div>
                             <span class="points__label">Points</span>
                         </div>
                     </div>
                 </div>
 
-                <div class="recommended__quiz__box">
+                <div class="skills__container">
                     
+                </div>
+                <div class="hours__played__container">
+
                 </div>
             </div>
         </section>
